Added convenience functions

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,7 @@
     display: block;
     font-size: .85em;
     margin-top: 0.25em;
+    margin-bottom: 0.25em;
 }
 .form-hint {
     display: block;
@@ -21,6 +22,10 @@
 }
 .form-input-invalid, .form-input-invalid:hover {
     border-color: #f14668 !important;
+}
+label {
+    margin-top: 0.85em;
+    display: inline-block;
 }
   </style>
 </head>
